--- a/source_code_project1.html
+++ b/source_code_project1.html
@@ -13,7 +13,7 @@
     /* CSS Reset */
     body {
         font-family: 'Baloo Bhai', cursive;
-        color: white;
+        color: red;
         margin: 0px;
         padding: 0px;
         background: url('helo.jpg');
@@ -148,6 +148,7 @@
     </header>
     <div class="container">
         <h1>Join the best gym of Delhi now</h1>
+ 
         <form action="noaction.php">
             <div class="form-group">
                 <input type="text" name="" placeholder="Enter your Name">
